# bpm-ai

./: .gitignore
.github/workflows/: bpm-ai-core.yml  bpm-ai.yml  main.yml  release.yml
bpm-ai/: README.md  pyproject.toml
bpm-ai-core/: .gitignore  README.md  pyproject.toml
bpm-ai-core/bpm_ai_core/classification/: transformers_classifier.py  zero_shot_classifier.py
bpm-ai-core/bpm_ai_core/extractive_qa/: question_answering.py  transformers_qa.py
bpm-ai-core/bpm_ai_core/llm/: anthropic.py  openai_chat.py
bpm-ai-core/bpm_ai_core/llm/anthropic_chat/: __init__.py  _constants.py  anthropic_chat.py  output_schema.prompt  util.py
bpm-ai-core/bpm_ai_core/llm/anthropic_chat/tools/: base_tool.py  messages_api_converters.py  prompt_constructors.py  tool.py  tool_user.py
bpm-ai-core/bpm_ai_core/llm/common/: blob.py  llm.py  message.py  tool.py
bpm-ai-core/bpm_ai_core/llm/openai_chat/: __init__.py  _constants.py  openai_chat.py  util.py
bpm-ai-core/bpm_ai_core/ocr/: amazon_textract.py  azure_doc_intelligence.py  ocr.py  tesseract.py
bpm-ai-core/bpm_ai_core/pos/: pos_tagger.py  spacy_pos_tagger.py
bpm-ai-core/bpm_ai_core/prompt/: filters.py  prompt.py
bpm-ai-core/bpm_ai_core/question_answering/: amazon_textract_docvqa.py  azure_doc_intelligence_docvqa.py  pix2struct_vqa.py  question_answering.py  transformers_docvqa.py  transformers_qa.py
bpm-ai-core/bpm_ai_core/speech/stt/: openai_whisper.py  stt.py
bpm-ai-core/bpm_ai_core/speech_recognition/: asr.py  faster_whisper.py  openai_whisper.py
bpm-ai-core/bpm_ai_core/testing/: fake_llm.py
bpm-ai-core/bpm_ai_core/tracing/: config.py  decorators.py  delegate.py  langfuse.py  langsmith.py  logging.py  tracer.py  tracing.py
bpm-ai-core/bpm_ai_core/translation/: amazon_translate.py  azure_translation.py  nmt.py
bpm-ai-core/bpm_ai_core/translation/easy_nmt/: easy_nmt.py  opus_mt.py  util.py
bpm-ai-core/bpm_ai_core/util/: audio.py  file.py  image.py  json.py  language.py  linguistics.py  markdown.py  openai.py  storage.py  xml.py
bpm-ai-core/tests/: pytest.ini  test.prompt  test_blob.py  test_classify.py  test_docvqa.py  test_filter.prompt  test_image.py  test_json.py  test_language.py  test_nmt.py  test_ocr.py  test_pos.py  test_prompt.py  test_qa.py  test_speech.py  test_torch.py
bpm-ai/bpm_ai/common/: errors.py  multimodal.py
bpm-ai/bpm_ai/compose/: compose.py  util.py
bpm-ai/bpm_ai/decide/: decide.py
bpm-ai/bpm_ai/extract/: extract.py
bpm-ai/bpm_ai/generic/: generic.py
bpm-ai/bpm_ai/translate/: translate.py
bpm-ai/tests/: conftest.py  pytest.ini  test_compose.py  test_decide.py  test_extract.py  test_generic.py  test_translate.py
