[tool.poetry]
name = "bpm-ai"
version = "1.0.3"
description = "AI task automation for BPM engines."
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
repository = "https://github.com/holunda-io/bpm-ai"
homepage = "https://www.holisticon.de/"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nltk = "^3.8.1"
bpm-ai-core = "1.0.7"
openai = {version = "^1.10.0"}
langfuse = "^2.6.3"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
