[tool.poetry]
name = "bpm-ai"
version = "1.0.4"
description = "AI task automation for BPM engines."
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
repository = "https://github.com/holunda-io/bpm-ai"
homepage = "https://www.holisticon.de/"
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bpm-ai-core = "1.0.7"
openai = "^1.11.0"
langfuse = "^2.7.6"


[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
